--- a/public/onehan_detail.html
+++ b/public/onehan_detail.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1판역-상세설명</title>
 </head>
-<body>
+<body></body>
     <h1>제작중</h1>
 </body>
 </html>
